--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Changes in version 1.1.4
 
 Changes in version 1.1.3
 ------------------------
-1. Added a File-Save-As item to the min menu.
+1. Added a File-Save-As item to the main menu.
 
 Changes in version 1.1.2
 ------------------------
